--- a/templates/main.page.gohtml
+++ b/templates/main.page.gohtml
@@ -1,26 +1,43 @@
 {{template "base" .}}
 
 {{define "content"}}
+    <div id="main-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/static/images/woman-laptop.png" class="d-block w-100" alt="woman">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/static/images/tray.png" class="d-block w-100" alt="tray">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/static/images/outside.png" class="d-block w-100" alt="outside">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <h1>This is a main page</h1>
-                <p>Some text</p>
-
-                <p>This is data from handler: {{index .StringMap "test"}}</p>
-
-                <p>
-                    {{if ne (index .StringMap "test") ""}}
-                        Your IP Address is: {{index .StringMap "test"}}
-                    {{else}}
-                        I do not know your IP Address
-                    {{end}}
-                </p>
+            <div class="col text-center">
+                <h1 class=" mt-4">Welcome to the Hotel California</h1>
+                <p class="text-center">The legendary Hotel from the song</p>
+                <a href="/calender" class="btn btn-success ">Calender</a>
             </div>
         </div>
     </div>
 {{end}}
-<!-- index означает данные, которые могут быть проиндексированы (т.е. коллекции разных типов)-->
-<!-- Или он означает тип данных индекс или ключ в коллекции -->
-<!-- index .StringMap "test" означает получение из приходящих из метода Execute данных, обработка находящейся там коллекции, и получение значения свойства StringMap по ключу "test" -->
-<!-- if ne (property) value Означает, если property не равно value -->
