--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -162,20 +162,19 @@
                     footer: footer
                 })
             }
-            const custom = async (params) => {
-                const {html ="", title =""} = params
+            const custom = async params => {
+                const {html ="", title ="", callback, willOpen, didOpen} = params
 
-                const { value: formValues } = await Swal.fire({
+                const { value: result } = await Swal.fire({
                     title: title,
                     html: html,
                     backdrop: false,
                     focusConfirm: false,
                     showCancelButton: true,
                     willOpen: () => {
-                        const elem = document.getElementById("reservation-dates-modal")
-                        const rp = new DateRangePicker(elem, {
-                            showOnFocus: true
-                        })
+                        if (willOpen !== undefined) {
+                            willOpen();
+                        }
                     },
                     preConfirm: () => {
                         return [
@@ -184,13 +183,23 @@
                         ]
                     },
                     didOpen: () => {
-                        document.getElementById("start").removeAttribute("disabled")
-                        document.getElementById("end").removeAttribute("disabled")
+                        if (didOpen !== undefined) {
+                            didOpen();
+                        }
                     }
                 })
-
-                if (formValues) {
-                    Swal.fire(JSON.stringify(formValues))
+                if (result) {
+                    if (result.dismiss !== Swal.DismissReason.cancel) {
+                        if (result.value !== "") {
+                            if (callback !== undefined) {
+                                callback(result);
+                            } else {
+                                callback(false)
+                            }
+                        } else {
+                            callback(false)
+                        }
+                    }
                 }
             }
             return {
