--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -1,4 +1,4 @@
-{{define "base"}}
+{{define "base" }}
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -108,6 +108,19 @@
                 confirmButtonText: button
             })
         }
+
+        {{with .Error}}
+            notify("{{.}}", "error")
+        {{end}}
+
+        {{with .Message}}
+            notify("{{.}}", "success")
+        {{end}}
+
+        {{with .Warning}}
+            notify("{{.}}", "warning")
+        {{end}}
+
         function prompt () {
 
             let toast = param => {
