--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -5,6 +5,7 @@
         <div class="row">
             <div class="col">
                 <h1>This is the about page</h1>
+                <p>This data comes from render function {{index .StringMap "defaultData"}}</p>
             </div>
         </div>
     </div>
