--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -1,5 +1,43 @@
 {{template "base" .}}
 
 {{define "content"}}
-    <h1>Reservation</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center mt-3">Reservation page</h1>
+            </div>
+
+            <form action="reservation.html" method="POST">
+
+                <div class="row">
+                    <div class="col">
+
+                        <div class="mb-3">
+                            <label for="first_name" class="form-label">First Name</label>
+                            <input required type="text" class="form-control" name="first_name" id="first_name" autocomplete="off">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="last_name" class="form-label">Last Name</label>
+                            <input required type="text" class="form-control" name="last_name" id="last_name" autocomplete="off">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input required type="email" class="form-control" name="email" id="email" autocomplete="off">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone</label>
+                            <input required type="text" class="form-control" name="phone" id="phone" autocomplete="off">
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
+
+        </div>
 {{end}}
