--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -7,11 +7,10 @@
                 <h1 class="text-center mt-3">Reservation page</h1>
             </div>
 
-            <form action="reservation.html" method="POST">
-
+            <form action="/reservation" method="post">
+                <input type="text" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="row">
                     <div class="col">
-
                         <div class="mb-3">
                             <label for="first_name" class="form-label">First Name</label>
                             <input required type="text" class="form-control" name="first_name" id="first_name" autocomplete="off">
@@ -31,13 +30,11 @@
                             <label for="phone" class="form-label">Phone</label>
                             <input required type="text" class="form-control" name="phone" id="phone" autocomplete="off">
                         </div>
-
                     </div>
-
-
                 </div>
                 <button type="submit" class="btn btn-success">Submit</button>
             </form>
 
         </div>
+    </div>
 {{end}}
