Adding errors handling

--- a/templates/main.page.tmpl
+++ b/templates/main.page.tmpl
@@ -51,4 +51,5 @@
                 <a href="/search-availability" class="btn btn-success">Choose date now</a>
             </div>
         </div>
+    </div>
 {{end}}
