--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
               crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
 
         {{block "css" .}}
 
@@ -76,10 +77,27 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/notie"></script>
 
+    <script>
+        function notify(type, msg) {
+            notie.alert({
+                type: type,
+                text: msg,
+            })
+        }
+        {{with .Error}}
+            notify("error", "{{.}}")
+        {{end}}
+
+        {{with .Message}}
+            notify("success", "{{.}}")
+        {{end}}
+
+        {{with .Warning}}
+            notify("warning", "{{.}}")
+        {{end}}
+    </script>
 
     {{block "js" .}}
 
