--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -55,8 +55,10 @@
 {{end}}
 
 {{define "js"}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <script>
-
         const sendData = () => {
             let startDate = document.getElementById("start_date").value
             let endDate = document.getElementById("end_date").value
@@ -73,6 +75,5 @@
                 console.log(data)
             })
         }
-
     </script>
 {{end}}
