--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -11,6 +11,23 @@
 
             <form action="/reservation" method="post">
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+                <!-- Test -->
+                <div class="form-group">
+                    <label for="start_date">Start Date</label>
+                    <input type="text" name="start_date" id="start_date" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="end_date">End Date</label>
+                    <input type="text" name="end_date" id="end_date" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="room_id">Room ID</label>
+                    <input type="text" name="room_id" id="room_id" class="form-control">
+                </div>
+                <!-- Test -->
+
+
                 <div class="row">
                     <div class="col">
                         <div class="mb-3">
