--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -4,29 +4,21 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="text-center mt-3">Reservation page</h1>
+                <h1 class="text-center mt-3">Reservation details</h1><br>
             </div>
+            {{$res := index .Data "reservation"}}
 
-            {{$res := index .Data "reservationPageInputs"}}
+            <div>
+                Room: {{$res.Room.RoomName}} <br>
+                Arrival: {{index .StringMap "start_date"}}<br>
+                Departure: {{index .StringMap "end_date"}}
+            </div>
 
             <form action="/reservation" method="post">
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
-
-                <!-- Test -->
-                <div class="form-group">
-                    <label for="start_date">Start Date</label>
-                    <input type="text" name="start_date" id="start_date" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="end_date">End Date</label>
-                    <input type="text" name="end_date" id="end_date" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="room_id">Room ID</label>
-                    <input type="text" name="room_id" id="room_id" class="form-control">
-                </div>
-                <!-- Test -->
-
+                <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                <input type="hidden" name="end_date" value="{{index .StringMap "start_date"}}">
+                <input type="hidden" name="room_id" value="{{$res.RoomId}}"><br>
 
                 <div class="row">
                     <div class="col">
