--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -26,11 +26,13 @@
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Hotel</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -57,7 +59,9 @@
                     </li>
                 </ul>
             </div>
+
         </div>
+
     </nav>
 
     {{block "content" .}}
@@ -65,14 +69,13 @@
     {{end}}
 
     <div class="row footer">
-
-        <div class="col">
+        <div class="col text-center mt-4">
             Left
         </div>
-        <div class="col">
+        <div class="col text-center mt-4">
             Middle
         </div>
-        <div class="col">
+        <div class="col text-center mt-4">
             Right
         </div>
     </div>
@@ -102,6 +105,9 @@
     {{block "js" .}}
 
     {{end}}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
     </body>
     </html>
