--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -55,24 +55,27 @@
 {{end}}
 
 {{define "js"}}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
     <script>
         const sendData = () => {
             let startDate = document.getElementById("start_date").value
             let endDate = document.getElementById("end_date").value
+
             if (startDate === undefined || startDate === null || startDate === "" || endDate === undefined || endDate === null || endDate === "") {
-                console.log("Dates are empty")
+                notify("error", "Dates are empty")
                 return
             }
 
             let form = document.getElementById("form")
             let formData = new FormData(form)
             formData.append("csrf_token", "{{.CSRFToken}}")
+            formData.append("room_id", "1")
 
             fetch("/search-availability-json", {method: "post", body: formData}).then(response => response.json()).then(data => {
-                console.log(data)
+                if (data.ok) {
+                    notify("success", "Room is available")
+                } else {
+                    notify("error", "room is not available")
+                }
             })
         }
     </script>
