--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -57,6 +57,10 @@
                     <li class="nav-item">
                         <a href="/contact" class="nav-link">Contact</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="/user/login" class="nav-link">Login</a>
+                    </li>
                 </ul>
             </div>
 
