--- a/templates/login.page.tmpl
+++ b/templates/login.page.tmpl
@@ -7,6 +7,7 @@
                 <h1 class="text-center mt-3">Login Page</h1>
 
                 <form action="/user/login" method="post">
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
