Adding Data to Main page handler after logging

--- a/templates/login.page.tmpl
+++ b/templates/login.page.tmpl
@@ -11,7 +11,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
-                                <label for="email" class="form-label">Login</label>
+                                <label for="email" class="form-label">Email</label>
 
                                 {{with .Form.Errors.Get "email"}}
                                     <label class="text-danger">{{.}}</label>
