Adding Logout Get handler

--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -59,7 +59,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="/user/login" class="nav-link">Login</a>
+                        {{ if .IsLoggedIn}}
+                            <a href="/user/logout" class="nav-link">Logout</a>
+                        {{ else }}
+                            <a href="/user/login" class="nav-link">Login</a>
+                        {{end}}
                     </li>
                 </ul>
             </div>
