Adding new middleware for authentication. Adding new template for Admin pages

--- a/templates/login.page.tmpl
+++ b/templates/login.page.tmpl
@@ -38,3 +38,11 @@
         </div>
     </div>
 {{end}}
+
+{{define "js"}}
+    <script>
+        if ({{index .Data "error"}}) {
+            notify("error", {{index .Data "error"}})
+        }
+    </script>
+{{end}}
