--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -41,15 +41,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Rooms
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/generals">General's Quarters</a></li>
-                            <li><a class="dropdown-item" href="/president">President Room</a></li>
-                        </ul>
-                    </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Rooms
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="/generals">General's Quarters</a></li>
+                                <li><a class="dropdown-item" href="/president">President Room</a></li>
+                            </ul>
+                        </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/search-availability">Choose Date now</a>
                     </li>
@@ -60,11 +60,19 @@
 
                     <li class="nav-item">
                         {{ if .IsLoggedIn}}
-                            <a href="/user/logout" class="nav-link">Logout</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Admin
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
+                                <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+                            </ul>
+                        </li>
+
                         {{ else }}
                             <a href="/user/login" class="nav-link">Login</a>
                         {{end}}
-                    </li>
                 </ul>
             </div>
 
