Creating content for all admin panels (pages)

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Admin Panel</a>
+            <div class="navbar-brand">Admin Panel</div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,15 +45,14 @@
             border-radius: 3px;
 ">
                 <h4>Reservations Data</h4>
-                <a class="btn btn-primary" href="#" style="margin: 3px">All Reservations</a>
-                <a class="btn btn-primary" href="#" style="margin: 3px">Create new Reservation</a>
+                <a class="btn btn-primary" href="/admin/all-reservations" style="margin: 3px">All Reservations</a>
+                <a class="btn btn-primary" href="/admin/create-new-reservation" style="margin: 3px">Create new Reservation</a>
             </div>
+            {{block "content" .}}
+
+            {{end}}
         </div>
     </div>
-
-    {{block "content" .}}
-
-    {{end}}
 
     {{block "js" .}}
 
