--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -1,12 +1,46 @@
 {{template "admin" .}}
 
+{{define "css"}}
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
+{{end}}
+
 {{define "content"}}
-    <div class="offset-1 col-8" style="border: 1px solid #0d6efd; border-radius: 3px; padding: 8px">
+    <div class="offset-1 col-8" style="border: 1px solid #0d6efd; border-radius: 3px; padding: 16px">
         <h4 class="text-center">All Reservations</h4>
-        <!-- range . -->
-        <p style="margin-left: 6px">item</p>
-        <p style="margin-left: 6px">item</p>
-        <p style="margin-left: 6px">item</p>
-        <p style="margin-left: 6px">item</p>
+        {{$reservations := index .Data "reservations"}}
+
+        <table id="all-res" class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Last name</th>
+                    <th>Room</th>
+                    <th>Arrival</th>
+                    <th>Departure</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{range $reservations}}
+                    <tr>
+                        <td>{{.ID}}</td>
+                        <td>
+                            <a href="/admin/reservations/all/{{.ID}}">
+                                {{.LastName}}
+                            </a>
+                        </td>
+                        <td>{{.Room.RoomName}}</td>
+                        <td>{{formattedDate .StartDate}}</td>
+                        <td>{{formattedDate .EndDate}}</td>
+                    </tr>
+                {{end}}
+            </tbody>
+        </table>
     </div>
+{{end}}
+
+{{define "js"}}
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+    <script>
+        const dataTable = new simpleDatatables.DataTable("#all-res", {select: 3, sort: "desc"})
+    </script>
 {{end}}
